--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js version 20
+      - name: Use Node.js version 20.11.1
         uses: actions/setup-node@v4
       with:
-        node-version: 20
+        node-version: '20.11.1'
     - run: npm install
     - run: npm run build --prefix client
 
