--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -6,7 +6,7 @@ on:
     pull_request: [main]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js version 20.11.1
