--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -3,7 +3,8 @@ name : NASA Prject CI
 on:
   push:
     branches: [main]
-    pull_request: [main]
+  pull_request: 
+    branches: [main]
 jobs:
   build:
     runs-on: windows-latest
@@ -15,9 +16,3 @@ jobs:
         node-version: '20.11.1'
     - run: npm install
     - run: npm run build --prefix client
-
-  # publish:
-  #   needs: [test]
-  #   steps:
-  #   - uses: actions/checkout@v4
-              
