--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,4 +1,4 @@
-name: NASA Project CI
+name: NASA-Project
 on:
   push:
     branches: [ main ]
@@ -13,9 +13,9 @@ jobs:
         node-version: ['20.11.1']
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Use Node.js version ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm install
