--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -18,4 +18,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install
       - run: npm run build --prefix client
-      - run: npm test --prefix server && npm test --prefix client
+      - run: npm test
