--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,11 +1,9 @@
 name: NASA-Project
 on:
   push:
-    branches: 
-      - main
+    branches: [ main ]
   pull_request:
-    branches: 
-      - main
+    branches: [ main ]
 jobs:
   build:
     strategy:
@@ -20,4 +18,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install
       - run: npm run build --prefix client
-      - run: npm test
+      - run: npm test 
