--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -6,6 +6,9 @@ on:
     branches: [ main ]
 jobs:
   build:
+    env:
+      CI: true
+      MONGO_URL: mongodb+srv://nasa-api:anushkaagrawal512@cluster0.fwp5e6t.mongodb.net/nasa?retryWrites=true&w=majority&appName=Cluster0
     strategy:
       matrix:
         node-version: ['20.11.1']
@@ -16,6 +19,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Use MongoDB from GitHub actions
+        uses: supercharge/mongodb-github-action@1.6.0
+        with:
+            mongodb-version: ${{ matrix.mongodb-version }}
       - run: npm install
       - run: npm run build --prefix client
       - run: npm test 
