--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "arwes": "^1.0.0-alpha.5",
-    "jest": "^27.5.1",
     "nodemon": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -15,7 +14,7 @@
     "start": "react-scripts start",
     "build": "set BUILD_PATH=../server/public && react-scripts build",
     "dev": "nodemon src/server.js",
-    "test": "jest --watchAll",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
