--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -23,4 +23,4 @@ jobs:
         # uses: supercharge/mongodb-github-action@1.6.0
       - run: npm install
       - run: npm run build --prefix client
-      - run: npm test 
+      # - run: npm test 
