--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       matrix:
         node-version: ['20.11.1']
+        mongodb-version : ['7.0.8']
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -19,8 +20,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      # - name: Use MongoDB from GitHub actions
-        # uses: supercharge/mongodb-github-action@1.6.0
+      - name: Use MongoDB from GitHub actions
+        uses: supercharge/mongodb-github-action@1.10.0
+        with:
+          node-version: ${{ matrix.mongodb-version }}
       - run: npm install
       - run: npm run build --prefix client
-      # - run: npm test 
+      - run: npm test 
