--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     env:
       CI: true
-      # MONGO_URL: mongodb+srv://nasa-api:anushkaagrawal512@cluster0.fwp5e6t.mongodb.net/nasa?retryWrites=true&w=majority&appName=Cluster0
+      MONGO_URL: mongodb+srv://nasa-api:anushkaagrawal512@cluster0.fwp5e6t.mongodb.net/nasa?retryWrites=true&w=majority&appName=Cluster0
     strategy:
       matrix:
         node-version: ['20.11.1']
@@ -27,5 +27,3 @@ jobs:
       - run: npm install
       - run: npm run build --prefix client
       - run: npm test 
-
-      # 111.118.249.194/32
