--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -26,7 +26,4 @@ jobs:
           node-version: ${{ matrix.mongodb-version }}
       - run: npm install
       - run: npm run build --prefix client
-      - run: npm test 
-      - name: Follow-up command
-        if: always()
-        run:  echo "Tests completed, proceeding with next command."
+      - run: npm test && exit
