--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -26,10 +26,5 @@ jobs:
           node-version: ${{ matrix.mongodb-version }}
       - run: npm install
       - run: npm run build --prefix client
-      - run: |
-         npm test | while IFS= read -r line; do
-         echo "$line"
-         if [[ "$line" == *"Ran all test suites"* ]]; then
-         break
-         fi
-         done
+      - run: npm test
+      - run: echo "Final step, workflow completed"
