--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -27,4 +27,4 @@ jobs:
       - run: npm install
       - run: npm run build --prefix client
       - run: npm test
-      - run: echo "Final step, workflow completed"
+        timeout-minutes: 1
